# AndroidAppTester

./: .classpath  .project  README.md
GenTestsfromIntentSpec/: AssertIntentParser.cabal
GenTestsfromIntentSpec/src/: ActionElements.hs  CategoryElements.hs  ComponentsElements.hs  DataElements.hs  ExtraElements.hs  FlagElements.hs  GenAndroidTestCode.hs  IntentParser.hs  IntentParserWithDataStructure.hs  IntentParserWithQuickCheckForSemanticData.hs  IntentSpec.hs  Main.hs  QuickCheck.hs  Test.hs  TypeElements.hs
UIforIntentSpec/: .classpath  .project  Hwacha.bat  README.md  Start.bat  TimeLog.txt  test.bat
UIforIntentSpec/IntentSpecBenchmark/: .classpath  .project
UIforIntentSpec/IntentSpecBenchmark/doc/: grammarForBenchmark.rtf
UIforIntentSpec/doc/: grammar.rtf  grammarForIntentSpecificationLanguage.rtf
UIforIntentSpec/src/: files.txt
UIforIntentSpec/src/kr_ac_yonsei_mobilesw_Grouping/: GroupingResult.java  List.java
UIforIntentSpec/src/kr_ac_yonsei_mobilesw_UI/: BenchAdd.java  BenchCommand.java  BenchStart.java  Benchbase.java  Benchmark.java  Config.java  GenAndroidTestCodeCommand.java  GenAndroidTestCodeUI.java  InterfaceWithExecution.java  JavaCommand.java  Main.java  MainByCommand.java  RunAdbCommand.java  SaveAndroidTestCode.java  exceltest.java
UIforIntentSpec/src/kr_ac_yonsei_mobilesw_WD/: Main.java  Watch.java  WatchDogLoop.java
UIforIntentSpec/src/kr_ac_yonsei_mobilesw_parser/: IntentData.java  KeyTypePair.java  ParserOnIntent.java
UIforIntentSpec/src/kr_ac_yonsei_mobilesw_shell/: ExecuteShellCommand.java
(+20 files in other folders)
